wagtail/videoembed: adding missing classname and make sure all page types are working

--- a/cms/blog/templates/cms_blog/blog_page.html
+++ b/cms/blog/templates/cms_blog/blog_page.html
@@ -60,7 +60,7 @@
             {% endif %}
         </div>
         <div class="container-medium">
-            <div class="blogpage-body">
+            <div class="blogpage-body rich-text">
                 {{ page.body|richtext }}
             </div>
         </div>
