cms_home/templates: add clearfix to richtext divs and margin to img fixes #577 fixes #576

--- a/civic_europe/assets/scss/core/_basics.scss
+++ b/civic_europe/assets/scss/core/_basics.scss
@@ -154,16 +154,19 @@ a,
         width: 100%;
     }
 
-    &.left {
+    &.left,
+    &.right {
         width: 50%;
-        float: left;
         margin-right: $spacer;
+        margin-bottom: $spacer;
+    }
+
+    &.left {
+        float: left;
     }
 
     &.right {
-        width: 50%;
         float: right;
-        margin-left: $spacer;
     }
 }
 
