--- a/cms/home/templates/cms_home/simple_page.html
+++ b/cms/home/templates/cms_home/simple_page.html
@@ -9,7 +9,7 @@
                 <h1>{{ page.title }}</h1>
                 {% for block in page.body %}
                   {% if block.block_type == 'text' %}
-                      <div class="rich-text">
+                      <div class="rich-text clearfix">
                           {% include_block block %}
                       </div>
                   {% else %}
